# upriv

./: .gitignore  AGENTS.md  README.md
.agent/: AGENT.md  README.md  SECURITY-PLAINTEXT.md
.cursor/agents/: upriv.md
.cursor/rules/: no-plaintext-on-disk.mdc
dev/: .gitignore  Cargo.toml  README.md  package.json  run
dev/apps/desktop/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.mjs  vite.config.ts
dev/apps/desktop/src/: RootApp.tsx  (+3 more)
dev/apps/electron/: README.md  package-lock.json  package.json  tsconfig.json
dev/apps/mobile/: README.md  app.json  metro.config.js  package.json  tsconfig.json
dev/apps/shared/: README.md  package.json  tsconfig.json
dev/crates/upriv-core/: Cargo.toml  README.md  build.rs
dev/crates/upriv-core/src/: error.rs  lib.rs
dev/crates/upriv-core/src/backup/: mod.rs
dev/crates/upriv-core/src/config/: app.rs  mod.rs  vault.rs
dev/crates/upriv-core/src/config/app_settings/: load_save.rs  mod.rs  toml.rs  types.rs
dev/crates/upriv-core/src/config/vault_config/: mod.rs  types.rs
dev/crates/upriv-core/src/crypto/: kdf.rs  keys.rs  mod.rs
dev/crates/upriv-core/src/encrypted_dir/: mod.rs
dev/crates/upriv-core/src/logging/: config.rs  format.rs  level.rs  mod.rs  writer.rs
dev/crates/upriv-core/src/mount/: fuse_linux.rs  mod.rs
dev/crates/upriv-core/src/paths/: distribution.rs  fs_env.rs  init.rs  mod.rs  resolve.rs  settings.rs
dev/crates/upriv-core/src/plain/: mod.rs  wipe.rs
dev/crates/upriv-core/src/session/: disk_auth.rs  mod.rs
dev/crates/upriv-core/src/seven_zip/: mod.rs
dev/crates/upriv-core/src/storage/: mod.rs
dev/crates/upriv-core/src/store/: hash.rs  header.rs  index_doc.rs  mod.rs
dev/crates/upriv-core/src/time/: mod.rs
dev/crates/upriv-core/src/vault/: change_password.rs  create.rs  delete.rs  list.rs  mod.rs  recovery.rs
dev/crates/upriv-core/tests/: fuse_mount.rs  plain_roundtrip.rs  prod_example_fuse.rs
dev/crates/upriv-daemon/: Cargo.toml
dev/crates/upriv-daemon/src/: main.rs  rpc.rs  wire.rs
dev/crates/upriv-daemon/tests/: stdio_roundtrip.rs
dev/desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dev/desktop/assets/: README.md
dev/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
dev/docs/: ARCHITECTURE.md  LOCALE.md  VERSIONS.md  WINDOWS-BUILD.md  prd.md  sdd.md
dev/docs/i18n/: README.md  en.json  pt-BR.json
dev/docs/stitch_upriv_vault_manager/: DESIGN.md  README.md  code.html
dev/mobile/: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
dev/mobile/src/: App.tsx
dev/scripts/: LINUX-PORTABLE.txt  build-linux-portable.sh  check-version.mjs  fix-desktop-permissions.sh  run-linux.sh  sync-version.mjs  verify-fuse-workspace.sh
dev/scripts/docker/: Dockerfile.linux-build
dev/shared/: README.md  tsconfig.json
dev/shared/src/: index.ts
dev/src-tauri/: Cargo.toml  tauri.conf.json
dev/src-tauri/capabilities/: default.json
dev/src-tauri/icons/: icon.icns
dev/src-tauri/src/: commands.rs  encrypted_sessions.rs  lib.rs  main.rs  power_linux.rs  workspace_fs.rs  workspace_watcher.rs
prod-example/: README.md  Upriv-linux  Upriv-mac
prod-example/.upriv/: settings.toml  state.json
prod-example/workspace/My Encrypted Notes/: STORE-WRITE-MAP.txt
(+574 files in other folders)
