[package]
name = "upriv"
version = "0.1.0"
description = "Upriv desktop shell (Tauri)"
authors = ["Upriv"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "upriv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
upriv-core = { path = "../crates/upriv-core" }
