[package]
name = "upriv"
version = "0.1.0"
description = "Upriv desktop shell (Tauri)"
authors = ["Upriv"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "upriv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
notify = "7.0"
notify-debouncer-mini = "0.5"
open = "5.3"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "=2.11.2", features = [] }
# FUSE enabled: real virtual mount for encrypted_dir (requires libfuse3-dev at build time).
upriv-core = { path = "../crates/upriv-core", default-features = false, features = ["fuse"] }
