[package]
name = "upriv-core"
version = "0.1.0"
description = "Upriv shared Rust core (desktop, mobile)"
authors = ["Upriv"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "upriv_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[dependencies]
aes-siv = "0.7"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"
toml = "0.8"
walkdir = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15", optional = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
