[package]
name = "upriv-core"
version.workspace = true
description = "Upriv shared Rust core (desktop, mobile)"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "upriv_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
