[package]
name = "upriv-daemon"
version = "0.1.0"
description = "Upriv desktop backend — stdio JSON-RPC bridge to upriv-core (Electron sidecar)"
authors = ["Upriv"]
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "upriv-daemon"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
upriv-core = { path = "../upriv-core" }
