[package]
name = "upriv-daemon"
version.workspace = true
description = "Upriv desktop backend — stdio JSON-RPC bridge to upriv-core (Electron sidecar)"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "upriv-daemon"
path = "src/main.rs"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
upriv-core = { path = "../upriv-core" }

[dev-dependencies]
tempfile = "3"
